--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@react-navigation/native-stack": "^6.9.1",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-gesture-handler": "^2.7.1",
+    "react-native-reanimated": "^2.11.0",
     "react-native-remix-icon": "^0.4.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.4.0",
+    "react-native-week-view": "^0.26.0",
     "twrnc": "^3.4.0"
   },
   "devDependencies": {
