--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.4.0",
+    "react-native-webview": "^11.23.1",
     "react-native-week-view": "^0.26.0",
     "twrnc": "^3.4.0"
   },
